--- a/views/includes/nav.pug
+++ b/views/includes/nav.pug
@@ -1,4 +1,49 @@
-include ./includes/nav.pug  
+meta(charset="utf-8")
+meta(http-equiv="X-UA-Compatible", content="IE=edge")
+meta(name="viewport", content="width=device-width,initial-scale=1")
+link(rel="apple-touch-icon", href="https://i.imgur.com/QRAUqs9.png")
+link(rel="shortcut icon", href="https://i.imgur.com/QRAUqs9.png")
+link(rel="stylesheet", href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.0/normalize.min.css")
+link(rel="stylesheet", href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css")
+link(rel="stylesheet", href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css")
+link(rel="stylesheet", href="https://cdn.jsdelivr.net/gh/lykmapipo/themify-icons@0.1.2/css/themify-icons.css")
+link(rel="stylesheet", href="https://cdn.jsdelivr.net/npm/pixeden-stroke-7-icon@1.2.3/pe-icon-7-stroke/dist/pe-icon-7-stroke.min.css")
+link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.2.0/css/flag-icon.min.css")
+link(rel="stylesheet", href="stylesheets/assets/css/cs-skin-elastic.css")
+link(rel="stylesheet", href="stylesheets/assets/css/style.css")
+//  Left Panel 
+aside#left-panel.left-panel
+  nav.navbar.navbar-expand-sm.navbar-default
+    #main-menu.main-menu.collapse.navbar-collapse
+      ul.nav.navbar-nav
+        li.active
+          a(href="/index")
+            i.menu-icon.fa.fa-laptop
+            | Dashboard 
+        li
+          a(href="/users")
+            i.menu-icon.fa.fa-list
+            | Add Menu
+        li
+          a(href="#")
+            i.menu-icon.fa.fa-edit
+            |  Update Menu
+        li
+          a(href="/users")
+            i.menu-icon.fa.fa-users
+            | Users
+        li
+          a(href="/reserve")
+            i.menu-icon.fa.fa-building
+            | Reservatio
+        li
+          a(href="#")
+            i.menu-icon.fa.fa-cutlery
+            | Orders
+        li
+          a(href="widgets.html")
+            i.menu-icon.ti-book
+            | About Us 
 #right-panel.right-panel
   //  Header
   header#header.header
@@ -86,41 +131,5 @@ include ./includes/nav.pug
             a.nav-link(href="#")
               i.fa.fa-power.-off
               | Logout
-  //  /#header 
-  //  Content
-
-  .content
-    .animated.fadeIn
-      .row
-       each food in foods
-         .col-md-4
-            .card
-             img.card-img-top(src=food.image,style="height: 350px", alt="Card image cap")
-             .card-body
-                h4.card-title.mb-3= food.menu_name 
-                h4.card-title.mb-3= food.price + ' Birr'
-                p.card-text= food.description
-                form(action="/changeStatus", method="post")
-                  input(type='hidden' name='foodName' value=food.menu_name)
-                  input(type='hidden' name='foodStatus' value=food.item_status)
-                  input(type='submit' value=!food.item_status ? 'Activate' : 'Deactivate')
-                form(action="/changeRecordStatus", method="post")
-                  input(type='hidden' name='foodName' value=food.menu_name)
-                  input(type='hidden' name='foodRecordStatus' value=food.item_record_status)
-                  input(type='submit' value= 'Delete')
-                form(action="/updateFood", method="post")
-                  input(type='hidden' name='foodName' value=food.menu_name)
-                  input(type='submit' value= 'Update') 
-                
-
-
-
-        
-      
-
-
-  script(src="https://cdn.jsdelivr.net/npm/jquery@2.2.4/dist/jquery.min.js")
-  script(src="https://cdn.jsdelivr.net/npm/popper.js@1.14.4/dist/umd/popper.min.js")
-  script(src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js")
-  script(src="https://cdn.jsdelivr.net/npm/jquery-match-height@0.7.2/dist/jquery.matchHeight.min.js")
-  script(src="assets/js/main.js")
+  //  /header 
+  //  Header
