--- a/views/restaurant.pug
+++ b/views/restaurant.pug
@@ -27,13 +27,13 @@ aside#left-panel.left-panel
         li
           a(href="/menu")
             i.menu-icon.fa.fa-list
-            |  Menu
+            | Menu
         li
           a(href="/users")
             i.menu-icon.fa.fa-users
             | Users
         li
-          a(href="/reserve")
+          a(href="/")
             i.menu-icon.fa.fa-building
             | Reservations
         li
@@ -41,7 +41,7 @@ aside#left-panel.left-panel
             i.menu-icon.fa.fa-cutlery
             | Orders
         li
-          a(href="/about")
+          a(href="widgets.html")
             i.menu-icon.ti-book
             | About Us 
 #right-panel.right-panel
@@ -131,5 +131,63 @@ aside#left-panel.left-panel
             a.nav-link(href="#")
               i.fa.fa-power.-off
               | Logout
-  //  /header 
-  //  Header
+  .content
+    .animated.fadeIn
+    
+      .row
+        .col-md-4
+          .card
+            img.card-img-top(src="images/OIP.jpg", alt="Card image cap")
+            .card-body
+              h4.card-title.mb-3 Restaurant 
+              p.card-text Some quick example
+        .col-md-4
+          .card
+            img.card-img-top(src="images/OIP.jpg", alt="Card image cap")
+            .card-body
+              h4.card-title.mb-3 Card Image Title
+              p.card-text Some quick example 
+        .col-md-4
+          .card
+            img.card-img-top(src="images/OIP.jpg", alt="Card image cap")
+            .card-body
+              h4.card-title.mb-3 Card Image Title
+              p.card-text Some quick example 
+
+        .col-md-4
+          .card
+            img.card-img-top(src="images/OIP.jpg", alt="Card image cap")
+            .card-body
+              h4.card-title.mb-3 Card Image Title
+              p.card-text Some quick example 
+        .col-md-4
+          .card
+            img.card-img-top(src="images/OIP.jpg", alt="Card image cap")
+            .card-body
+              h4.card-title.mb-3 Card Image Title
+              p.card-text Some quick example
+        .col-md-4
+          .card
+            img.card-img-top(src="images/OIP.jpg", alt="Card image cap")
+            .card-body
+              h4.card-title.mb-3 Card Image Title
+              p.card-text Some quick example 
+        //- .col-md-4
+        //-   .card
+        //-     img.card-img-top(src="images/OIP.jpg", alt="Card image cap")
+        //-     .card-body
+        //-       h4.card-title.mb-3 Card Image Title
+        //-       p.card-text Some quick example
+
+        //- .col-md-4
+        //-   .card
+        //-     img.card-img-top(src="images/OIP.jpg", alt="Card image cap")
+        //-     .card-body
+        //-       h4.card-title.mb-3 Card Image Title
+        //-       p.card-text Some quick example 
+
+script(src="https://cdn.jsdelivr.net/npm/jquery@2.2.4/dist/jquery.min.js")
+script(src="https://cdn.jsdelivr.net/npm/popper.js@1.14.4/dist/umd/popper.min.js")
+script(src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js")
+script(src="https://cdn.jsdelivr.net/npm/jquery-match-height@0.7.2/dist/jquery.matchHeight.min.js")
+script(src="assets/js/main.js")
