--- a/views/orders.pug
+++ b/views/orders.pug
@@ -1,4 +1,49 @@
-include ./includes/nav.pug  
+meta(charset="utf-8")
+meta(http-equiv="X-UA-Compatible", content="IE=edge")
+meta(name="viewport", content="width=device-width,initial-scale=1")
+link(rel="apple-touch-icon", href="https://i.imgur.com/QRAUqs9.png")
+link(rel="shortcut icon", href="https://i.imgur.com/QRAUqs9.png")
+link(rel="stylesheet", href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.0/normalize.min.css")
+link(rel="stylesheet", href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css")
+link(rel="stylesheet", href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css")
+link(rel="stylesheet", href="https://cdn.jsdelivr.net/gh/lykmapipo/themify-icons@0.1.2/css/themify-icons.css")
+link(rel="stylesheet", href="https://cdn.jsdelivr.net/npm/pixeden-stroke-7-icon@1.2.3/pe-icon-7-stroke/dist/pe-icon-7-stroke.min.css")
+link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.2.0/css/flag-icon.min.css")
+link(rel="stylesheet", href="stylesheets/assets/css/cs-skin-elastic.css")
+link(rel="stylesheet", href="stylesheets/assets/css/style.css")
+//  Left Panel 
+aside#left-panel.left-panel
+  nav.navbar.navbar-expand-sm.navbar-default
+    #main-menu.main-menu.collapse.navbar-collapse
+      ul.nav.navbar-nav
+        li.active
+          a(href="/index")
+            i.menu-icon.fa.fa-laptop
+            | Dashboard 
+        li
+          a(href="/addFood")
+            i.menu-icon.fa.fa-edit
+            | Add Menu
+        li
+          a(href="/menu")
+            i.menu-icon.fa.fa-list
+            | Menu
+        li
+          a(href="/users")
+            i.menu-icon.fa.fa-users
+            | Users
+        li
+          a(href="/reserve")
+            i.menu-icon.fa.fa-building
+            | Reservations
+        li
+          a(href="#")
+            i.menu-icon.fa.fa-cutlery
+            | Orders
+        li
+          a(href="widgets.html")
+            i.menu-icon.ti-book
+            | About Us 
 #right-panel.right-panel
   //  Header
   header#header.header
@@ -97,10 +142,10 @@ include ./includes/nav.pug
       //  Orders 
       .orders
         .row
-          .col-xl-8
+          .col-xl-12
             .card
               .card-body
-                h4.box-title Orders
+                h4.box-title 
               .card-body--
                 .table-stats.order-table.ov-h
                   table.table
@@ -111,85 +156,39 @@ include ./includes/nav.pug
                         th ID
                         th Name
                         th Product
+                        th Location
+                        th Time
                         th Quantity
+                        th Unit Price
+                        th Total price
                         th Status
+                     
                     tbody
+                    each item in order
                       tr
                         td.serial 1.
                         td.avatar
                           .round-img
                             a(href="#")
                               img.rounded-circle(src="images/avatar/1.jpg", alt)
-                        td #5469
+                        td= item.Id
                         td
-                          span.name Louis Stanley
+                          span.name= item.name
                         td
-                          span.product iMax
+                          span.product= item.product
                         td
                           span.count 231
                         td
-                          span.badge.badge-complete Complete
-                      tr
-                        td.serial 2.
-                        td.avatar
-                          .round-img
-                            a(href="#")
-                              img.rounded-circle(src="images/avatar/2.jpg", alt)
-                        td #5468
+                          span.name= item.quantity 
                         td
-                          span.name Gregory Dixon
+                          span.product= item.quantity
                         td
-                          span.product iPad
+                          span.count= item.unitprice
                         td
-                          span.count 250
+                          span.count= item.quantity*item.unitprice
                         td
-                          span.badge.badge-complete Complete
-                      tr
-                        td.serial 3.
-                        td.avatar
-                          .round-img
-                            a(href="#")
-                              img.rounded-circle(src="images/avatar/3.jpg", alt)
-                        td #5467
-                        td
-                          span.name Catherine Dixon
-                        td
-                          span.product SSD
-                        td
-                          span.count 250
-                        td
-                          span.badge.badge-complete Complete
-                      tr
-                        td.serial 4.
-                        td.avatar
-                          .round-img
-                            a(href="#")
-                              img.rounded-circle(src="images/avatar/4.jpg", alt)
-                        td #5466
-                        td
-                          span.name Mary Silva
-                        td
-                          span.product Magic Mouse
-                        td
-                          span.count 250
-                        td
-                          span.badge.badge-pending Pending
-                      tr.pb-0
-                        td.serial 5.
-                        td.avatar.pb-0
-                          .round-img
-                            a(href="#")
-                              img.rounded-circle(src="images/avatar/6.jpg", alt)
-                        td #5465
-                        td
-                          span.name Johnny Stephens
-                        td
-                          span.product Monitor
-                        td
-                          span.count 250
-                        td
-                          span.badge.badge-complete Complete
- 
+                          span.badge.badge-complete= item.status
+                      
 .clearfix
 
 script(src="https://cdn.jsdelivr.net/npm/jquery@2.2.4/dist/jquery.min.js")
