basic functionality done.

--- a/views/includes/nav.pug
+++ b/views/includes/nav.pug
@@ -44,6 +44,10 @@ aside#left-panel.left-panel
           a(href="/about")
             i.menu-icon.ti-book
             | About Us 
+        li
+          a(href="/signout")
+            i.menu-icon.ti-book
+            | Logout 
 #right-panel.right-panel
   //  Header
   header#header.header
