--- a/views/menu.pug
+++ b/views/menu.pug
@@ -5,7 +5,7 @@ include ./includes/nav.pug
     .top-left
       .navbar-header
         a.navbar-brand(href="./")
-          h5 My Restaurant App
+          h5=restuarant_name
         a.navbar-brand.hidden(href="./")
           
         a#menuToggle.menutoggle
