adding reserve with orders page

--- a/views/includes/nav.pug
+++ b/views/includes/nav.pug
@@ -35,7 +35,11 @@ aside#left-panel.left-panel
         li
           a(href="/reserve")
             i.menu-icon.fa.fa-building
-            | Reservations
+            | Reserve Only
+        li
+          a(href="/Specialreserve")
+            i.menu-icon.fa.fa-book
+            | Reserve with Orders
         li
           a(href="/orders")
             i.menu-icon.fa.fa-cutlery
